# lumos-svm-rs

./: .editorconfig  .gitignore  COPYING  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  clippy.toml  lumos.toml  rustfmt.toml  tasks.yaml
.github/workflows/: build-push-release.yaml  ci.yaml
ci/: ubuntu-install-packages
src/: file.rs  idl_utils.rs  lib.rs  lumos_context.rs  macros.rs  solana_utils.rs  traits.rs  utils.rs  version.rs
src/schema/: account_config.rs  config_root.rs  general_config.rs  mod.rs  program_config.rs
