[package]
name = "lumos-svm-rs"
version = "0.1.0"
edition = "2024"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
readme = "README.md"
description = "A simple wrapper to solana-test-validator. 🦀"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/lumos-svm-rs"
repository = "https://github.com/ffimnsr/lumos-svm-rs"
license = "MIT OR Apache-2.0"
keywords = ["command-line", "svm", "cli", "validator", "utility"]
exclude = [
  ".gitignore",
  "/.githooks/",
  "/.github/",
  "/ci/",
  "/docs/",
]

[lib]
name = "lumos_svm_lib"
path = "src/lib.rs"

[[bin]]
name = "lumos-svm"
path = "src/cli/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.40"
env_logger = "0.11.6"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
log = "0.4.22"
regex = "1.11.1"
which = "7.0.1"
solana-sdk = { version = "2.2.1", features = ["openssl-vendored"] }
indicatif = "0.17.11"
hashbrown = { version = "0.15.2", features = ["serde"] }
once_cell = "1.20.3"
rand = "0.9.0"
solana-client = "2.2.0"
tokio = { version = "1.43.0", features = ["full"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"] }
solana-account-decoder = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = { version = "3.1.3", default-features = false, features = ["diff", "regex"] }
snapbox = "0.6.21"
trycmd = "0.15.8"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
